--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,7 @@
   --line-height-step-9: 110%;
 }
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -36,24 +37,24 @@
   }
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   max-width: 1280px;
-  height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  flex: 1;
+  padding: 20px 0;
   margin: 0 auto;
   color: var(--foreground);
-  border-left: 1px solid slategray;
-  border-right: 1px solid slategray;
-  padding: 50px 0 50px 0;
 }
 
 h1 {
-  font-size: var(--font-size-step-7);
-  color: #3F51B5;
-  font-weight: bold;
+  font-size: var(--font-size-step-9);
+  line-height: var(--line-height-step-9);
 }
 
 h2 {
@@ -125,17 +126,20 @@ h6 {
   font-size: var(--font-size-step-9);
   line-height: var(--line-height-step-9);
 }
+
 .border-defautl {
   border: 1px solid slategray;
 }
 
-.menu-items, .icons {
+.menu-items,
+.icons {
   height: 100%;
   display: flex;
   align-items: center;
   border-right: 1px solid slategray;
   padding: 0 16px 0 16px;
 }
+
 .menu-items-mobile {
   height: 100%;
   display: flex;
@@ -145,20 +149,36 @@ h6 {
   padding: 1rem;
 }
 
-.menu-items:hover, .menu-buttom:hover {
-  cursor: pointer;
-  border-bottom: 2px solid #ffa400;
-}
-.active {
- border-bottom: 2px solid #ffa400;
-}
-
-.menu-buttom {
+.menu-button {
   height: 100%;
   align-items: center;
   border-left: 1px solid slategray;
   border-bottom: 1px solid transparent;
   padding: 0 16px 0 16px;
+}
+
+.menu-items-bottom {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  border-left: 1px solid slategray;
+  padding: 0 16px 0 16px;
+}
+
+.menu-items:hover,
+.menu-button:hover {
+  cursor: pointer;
+  border-bottom: 2px solid #ffa400;
+}
+
+.menu-items-bottom:hover,
+.icons:hover {
+  cursor: pointer;
+  border-top: 2px solid #ffa400;
+}
+
+.active {
+  border-bottom: 2px solid #ffa400 !important;
 }
 
 
@@ -185,13 +205,27 @@ section {
 }
 
 @keyframes slideIn {
-  from { transform: translateX(-10px); opacity: 0; }
-  to { transform: translateX(0); opacity: 1; }
+  from {
+    transform: translateX(-10px);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 @keyframes slideOut {
-  from { transform: translateX(0); opacity: 1; }
-  to { transform: translateX(10px); opacity: 0; }
+  from {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  to {
+    transform: translateX(10px);
+    opacity: 0;
+  }
 }
 
 /* Adicione estas classes conforme necessário */
@@ -204,7 +238,52 @@ section {
 }
 
 @keyframes progress {
-  0% { transform: translateX(-100%) scaleX(0.1); }
-  50% { transform: translateX(50%) scaleX(0.5); }
-  100% { transform: translateX(200%) scaleX(0.1); }
+  0% {
+    transform: translateX(-100%) scaleX(0.1);
+  }
+
+  50% {
+    transform: translateX(50%) scaleX(0.5);
+  }
+
+  100% {
+    transform: translateX(200%) scaleX(0.1);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    padding: 0;
+  }
+
+  h1 {
+    font-size: var(--font-size-step-7);
+    line-height: var(--line-height-step-7);
+  }
+
+  h2 {
+    font-size: var(--font-size-step-6);
+    line-height: var(--line-height-step-6);
+  }
+
+  h3 {
+    font-size: var(--font-size-step-5);
+    line-height: var(--line-height-step-5);
+  }
+
+  h4 {
+    font-size: var(--font-size-step-4);
+    line-height: var(--line-height-step-4);
+  }
+
+  h5 {
+    font-size: var(--font-size-step-3);
+    line-height: var(--line-height-step-3);
+  }
+
+  h6 {
+    font-size: var(--font-size-step-2);
+    line-height: var(--line-height-step-2);
+  }
+
 }
